--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ PORT=3000
 MONGO=mongodb+srv://shubhamprajapati9537:S1hubham@cluster0.mwyn4.mongodb.net/RealEstate?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=surgywe648ebuyw3tviuey4btesygir
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://heaven-hub-estate.vercel.app
