--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,6 +7,6 @@
     }
   ],
   "routes": [
-    { "src": "/server/(.*)", "dest": "api/index.js" }
+    { "src": "/server/(.*)", "dest": "server/index.js" }
   ]
 }
