--- a/server/vercel.json
+++ b/server/vercel.json
@@ -27,7 +27,7 @@
   "env": {
     "PORT": "3000",
     "MONGO": "mongodb+srv://shubhamprajapati9537:S1hubham@cluster0.mwyn4.mongodb.net/RealEstate?retryWrites=true&w=majority&appName=Cluster0",
-    "FRONTEND_URL": "https://your-frontend-url.vercel.app",
+    "FRONTEND_URL": "https://heaven-hub-estate.vercel.app",
     "JWT_SECRET": "surgywe648ebuyw3tviuey4btesygir"
   }
 }
