--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,32 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/index.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/auth/(.*)",
-      "dest": "server/index.js"
-    },
-    {
-      "src": "/api/listing/(.*)",
-      "dest": "server/index.js"
-    },
-    {
-      "src": "/api/user/(.*)",
-      "dest": "server/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "server/index.js"
+      "src": "/api/(.*)",
+      "dest": "server.js"
     }
-  ],
-  "env": {
-    "PORT": "3000",
-    "MONGO": "mongodb+srv://shubhamprajapati9537:S1hubham@cluster0.mwyn4.mongodb.net/RealEstate?retryWrites=true&w=majority&appName=Cluster0",
-    "FRONTEND_URL": "https://heaven-hub-estate.vercel.app",
-    "JWT_SECRET": "surgywe648ebuyw3tviuey4btesygir"
-  }
+  ]
 }
